--- a/assets/css/menu/menu-link.css
+++ b/assets/css/menu/menu-link.css
@@ -1,10 +1,10 @@
 
 
-.menu-item:last-child .menu-link{
+.menu__item:last-child .menu__link{
     margin-right: 0;
 }
 
-.menu-link {
+.menu__link {
     color: #808080;
     margin-right: 1.25rem;
     text-decoration: none;
@@ -16,7 +16,7 @@
     font-weight: bold;
 }
 
-.menu-link:hover {
+.menu__link:hover {
     text-decoration: underline;
 }
 
