--- a/assets/css/banner/banner-imagem.css
+++ b/assets/css/banner/banner-imagem.css
@@ -1,7 +1,5 @@
 .banner__imagem {
-    background-image: url(../../img/banner.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
+    background: url(../../img/banner.jpg) center no-repeat;
     background-size: cover;
     height: calc(100vh - 72px);
     width: 100%;
